@@ -1,3 +1,5 @@
+* Add AUTOINCREMENT to sqlite primary key
+
 Version 1.8.0 - 2010-11-01
 * Bug fixes (see mercurial logs for details)
 * Add timestamp sequence
